--- a/calculator.html
+++ b/calculator.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
+
+    <div id="display">1+1=2</div>
+    <div class="buttons">
+        <button class="digit">0</button>
+        <button class="digit">1</button>
+        <button class="digit">2</button>
+        <button class="digit">3</button>
+        <button class="digit">4</button>
+        <button class="digit">5</button>
+        <button class="digit">6</button>
+        <button class="digit">7</button>
+        <button class="digit">8</button>
+        <button class="digit">9</button>
+        <button class="digit">+</button>
+        <button class="digit">-</button>
+        <button class="digit">x</button>
+        <button class="digit">:</button>
+        <button class="digit">=</button>
+        <button class="digit">CLEAR</button>
+    </div>
+    
     <script src="brain.js"></script>
 </body>
 </html>
