set the digit number limit and added event listener for the number buttons of the calculator

--- a/calculator.html
+++ b/calculator.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
-
 </head>
 <body>
 
-    <div id="display">1+1=2</div>
+    <p id="display"></p>
     <div class="buttons">
         <button class="digit">0</button>
         <button class="digit">1</button>
@@ -21,12 +20,12 @@
         <button class="digit">7</button>
         <button class="digit">8</button>
         <button class="digit">9</button>
-        <button class="digit">+</button>
-        <button class="digit">-</button>
-        <button class="digit">x</button>
-        <button class="digit">:</button>
-        <button class="digit">=</button>
-        <button class="digit">CLEAR</button>
+        <button class="oper">+</button>
+        <button class="oper">-</button>
+        <button class="oper">x</button>
+        <button class="oper">:</button>
+        <button class="equals">=</button>
+        <button class="clear">CLEAR</button>
     </div>
     
     <script src="brain.js"></script>
