changed the class name to the operators and added a README message

--- a/calculator.html
+++ b/calculator.html
@@ -24,6 +24,7 @@
         <button class="oper">-</button>
         <button class="oper">x</button>
         <button class="oper">:</button>
+        <button class="dot">.</button>
         <button class="equals">=</button>
         <button class="clear">CLEAR</button>
     </div>
